<resources>
    <!-- App & Activity titles -->
    <string name="app_name">Trevie</string>
    <string name="title_activity_movie">MovieActivity</string>

    <!-- Labels for menu items -->
    <string name="action_settings">Settings</string>

    <!-- Keys for SharedPreferences -->
    <string name="pref_sort_key">sort type</string>
    <string name="pref_file_key">user preferences</string>
    <string name="pref_favourite_movies">eu.redray.trevie.FAVOURITE_MOVIES</string>

    <!-- TextView placeholder text -->
    <string name="loading">…</string>

    <!-- Labels for sort type dialog -->
    <string name="sort_by">Sort movies by…</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="sort_favourites">Favourites</string>

    <!-- Labels for movie details screen -->
    <string name="label_movie_genre">Genre:</string>
    <string name="label_movie_duration">Duration:</string>
    <string name="label_movie_release_date">Release Date:</string>
    <string name="label_movie_country">Country:</string>
    <string name="label_movie_average_rating">Average Rating:</string>
    <string name="label_movie_synopsis">Plot Synopsis</string>
    <string name="label_movie_reviews">User Reviews</string>
    <string name="error_message_no_reviews">There are no reviews.</string>

    <!-- Descriptions for images -->
    <string name="description_movie_poster">Movie Poster</string>
    <string name="description_favourite_button">Favourites Button</string>
    <string name="description_favourite_icon">Favourites Icon</string>

    <!-- Strings related to playing trailers -->
    <string name="play_trailer">Trailer</string>
    <string name="choose_trailer">Choose trailer to play…</string>
    <string name="error_message_no_trailers">There are no trailers to play</string>
    <string name="share_trailer">Share Trailer</string>

    <!-- Various error messages -->
    <string name="error_message_no_connection">There is no internet connection.</string>
    <string name="displaying_favourites">Displaying Favourites Collection</string>
    <string name="empty_grid_message">Oh noes, there is nothing\n in favourites…</string>
    <string name="error_try_again">Something went wrong... Please try again.</string>
</resources>
