<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/touch_selector">

    <!-- the ImageView for the movie poster -->
    <ImageView
        android:id="@+id/grid_movie_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_movie_poster"
        android:scaleType="fitCenter">
    </ImageView>

    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/grid_item_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryAlpha">

        <TextView
            android:id="@+id/grid_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toLeftOf="@+id/grid_movie_favourite"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/loading"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:id="@+id/grid_movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/loading"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_size_small"/>

        <ImageView
            android:id="@+id/grid_movie_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:contentDescription="@string/description_favourite_icon"
            android:src="@drawable/ic_star_border_white_24dp"/>
    </RelativeLayout>

</RelativeLayout>