<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eu.redray.trevie.MovieDetailsActivity"
    tools:showIn="@layout/activity_movie">

    <LinearLayout
        android:id="@+id/movie_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <!-- Top Bar -->
        <RelativeLayout
            android:id="@+id/movie_details_title_frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height">

            <TextView
                android:id="@+id/movie_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/movie_details_favourite"
                android:layout_toStartOf="@+id/movie_details_favourite"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>


            <ImageView
                android:id="@+id/movie_details_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/description_favourite_button"
                android:padding="@dimen/favourite_button_padding"
                android:src="@drawable/ic_star_border_black_24dp"/>

        </RelativeLayout>

        <!-- Movie Details -->
        <View
            android:id="@+id/movie_details_separator1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="@color/colorDivider"
            android:layout_marginBottom="@dimen/section_spacing"/>

        <LinearLayout
            android:id="@+id/movie_details_poster_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Movie Poster -->
            <ImageView
                android:id="@+id/movie_details_poster"
                android:layout_width="@dimen/auto_width"
                android:layout_height="@dimen/poster_height"
                android:layout_weight="1"
                android:contentDescription="@string/description_movie_poster"
                android:src="@drawable/temp"/>

            <RelativeLayout
                android:layout_width="@dimen/auto_width"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ProgressBar
                    android:id="@+id/progress_details"
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_spinner_offset"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:id="@+id/movie_details_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="@dimen/auto_width"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/content_spacing"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/movie_details_genre_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:text="@string/label_movie_genre"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_details_duration_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:text="@string/label_movie_duration"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_details_release_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:text="@string/label_movie_release_date"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_details_country_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:text="@string/label_movie_country"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movie_details_rating_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:text="@string/label_movie_average_rating"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/auto_width"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:id="@+id/movie_details_genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:fadingEdge="horizontal"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="@dimen/text_padding"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            android:id="@+id/movie_details_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            android:id="@+id/movie_details_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            android:id="@+id/movie_details_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:fadingEdge="horizontal"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="@dimen/text_padding"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            android:id="@+id/movie_details_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:textSize="@dimen/text_size_small"/>

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/trailer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@android:drawable/ic_media_play"
                    android:drawableStart="@drawable/ic_play_arrow_black_24dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="16dp"
                    android:text="@string/label_trailer_button"/>

            </RelativeLayout>

        </LinearLayout>

        <!-- Plot Synopsis -->
        <TextView
            android:id="@+id/movie_details_synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_spacing"
            android:text="@string/label_movie_synopsis"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_medium"/>

        <View
            android:id="@+id/movie_details_separator2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginBottom="@dimen/content_spacing"
            android:layout_marginTop="@dimen/content_spacing"
            android:background="@color/colorDivider"/>

        <TextView
            android:id="@+id/movie_details_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- User Reviews -->
        <TextView
            android:id="@+id/movie_details_reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_spacing"
            android:text="@string/label_movie_reviews"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_medium"/>

        <View
            android:id="@+id/movie_details_separator3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginBottom="@dimen/content_spacing"
            android:layout_marginTop="@dimen/content_spacing"
            android:background="@color/colorDivider"/>

        <ProgressBar
            android:id="@+id/progress_reviews"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/movie_details_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>